[gd_scene load_steps=2 format=3 uid="uid://41ccc1p7qgyq"]

[ext_resource type="Script" uid="uid://y8ghryxnhw5g" path="res://Menus/Pause/pause.gd" id="1_g0brr"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g0brr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonContinuar" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="ButtonMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to main menu"

[node name="ButtonSair" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to desktop"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContinuar" to="." method="_on_button_continuar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonMenu" to="." method="_on_button_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonSair" to="." method="_on_button_sair_pressed"]
